# qemu

./: configure  qemu-options.hx
chardev/: char-fe.c  char-serial.c  trace-events
configs/devices/msp430-softmmu/: default.mak
configs/targets/: msp430-softmmu.mak
docs/about/: emulation.rst
gdb-xml/: msp430-cpu.xml
hw/: Kconfig  meson.build
hw/block/: m25p80.c
hw/char/: Kconfig  meson.build  msp430_usart.c  msp430_usci.c  riscv_htif.c
hw/core/: gpio.c  loader.c  reset.c
hw/display/: Kconfig  gpio_lcd.c  meson.build
hw/display/lcdmaps/: meson.build
hw/gpio/: Kconfig  meson.build  msp430_lcd.c  msp430_port.c
hw/intc/: Kconfig  meson.build  msp430_sfr.c
hw/misc/: Kconfig  clk_gpio.c  meson.build
hw/msp430/: Kconfig  bcm.c  bcmp.c  fllp.c  launchpad.c  meson.build  mpy.c  msp430.c  msp430.h  softbaugh.c  virt.c
hw/riscv/: boot.c
hw/timer/: Kconfig  meson.build  msp430_bt.c  msp430_timer.c  trace-events
hw/watchdog/: Kconfig  meson.build  msp430_wdt.c
include/: elf.h
include/disas/: dis-asm.h
include/hw/: elf_ops.h  elf_ops.h.inc  loader.h  qdev-core.h  resettable.h
include/hw/char/: msp430_usart.h  msp430_usci.h  riscv_htif.h
include/hw/core/: split-irq.h
include/hw/display/: gpio_lcd.h
include/hw/gpio/: msp430_lcd.h  msp430_port.h
include/qemu/: bitops.h  datadir.h
include/sysemu/: arch_init.h
python/tests/: minreqs.txt
qapi/: machine.json
system/: datadir.c  qtest.c
tests/qtest/: boot-serial-test.c  libqtest.c  libqtest.h  machine-none-test.c  meson.build  msp430_lcd.c  msp430_mpy.c  msp430_port.c
(+38 files in other folders)
